extend sample command for launching JOSM